--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 .card-content {
-  background-color: #FEF9E7;
+  /*background-color: #FEF9E7;*/
   min-height: 240px;
   position: relative;
 }
 
 .card-header {
-  background-color: #F9E79F;
+  /*background-color: #F9E79F;*/
 }
 
 .card-header, .card-content {
