--- a/style.css
+++ b/style.css
@@ -1,20 +1,18 @@
+.container {
+  font-size: 2rem;
+}
+
 .card-content {
-  /*background-color: #FEF9E7;*/
   min-height: 240px;
   position: relative;
 }
 
-.card, .card-content, .card-header {
-  background-image: url("img/2144.jpg");
-  font-family: "Covered By Your Grace"
-}
-
-.card-header {
-  /*background-color: #F9E79F;*/
-}
-
-.card-header, .card-content {
+.card {
   min-width: 150px;
+}
+
+.bg-overlay {
+  background-color: rgba(255, 255, 255, 0.5)
 }
 
 .hero {
